# sts2DEFECTadvisor

./: .gitignore  README.md  install-windows.bat  pyproject.toml  requirements-windows.txt  run-panel.bat
data/recommendations/: slay-the-spire-2-manual.example.json  slay-the-spire-2-manual.json
docs/: card-reward-recognition-report.md  data-source-strategy.md  product-requirements.md  quality-checklist.md  realtime-screenshot-recognition.md  recommendation-extraction-notes.md  system-architecture.md  ui-design.md  windows-portable.md
docs/superpowers/plans/: 2026-06-27-project-skeleton.md
src/sts2defect/: __init__.py  cli.py  models.py  recommendations.py  savefiles.py  settings.py  sts2mcp.py
src/sts2defect/capture/: __init__.py  interfaces.py  screenshot.py
src/sts2defect/overlay/: __init__.py  interfaces.py
src/sts2defect/recognition/: __init__.py  card_reward.py  card_reward_ocr.py  interfaces.py
src/sts2defect/ui/: __init__.py  panel.py  view_model.py
tests/: test_card_reward_ocr.py  test_card_reward_recognition.py  test_recommendations.py  test_release_hygiene.py  test_savefiles.py  test_screen_capture.py  test_settings.py  test_sts2mcp.py  test_ui_panel.py  test_ui_view_model.py  test_windows_portable.py
tests/fixtures/profile1/saves/: current_run.save
